--- a/META.yml
+++ b/META.yml
@@ -31,5 +31,5 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=dbix-scopedtransaction
   homepage: https://metacpan.org/release/DBIx-ScopedTransaction
   license: http://www.perlfoundation.org/artistic_license_1_0
-  repository: https://sourceforge.net/p/perltransaction/code
+  repository: https://github.com/guillaumeaubert/DBIx-ScopedTransaction
 version: v1.0.6
