--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   Data::Dumper: 0
   File::Spec: 0
   Test::Exception: 0
+  Test::FailWarnings: 0
   Test::More: 0
 configure_requires:
   Module::Build: 0
