--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ env:
   - SCOPED_TRANSACTION_DATABASE=''
   - SCOPED_TRANSACTION_DATABASE='DBI:mysql:database=scoped_transaction_test;host=127.0.0.1|root|'
   - SCOPED_TRANSACTION_DATABASE='DBI:Pg:dbname=scoped_transaction_test;host=127.0.0.1|postgres|'
+before_install:
+  cpanm -n Devel::Cover::Report::Coveralls
+script:
+  perl Build.PL && ./Build build && cover -test -report coveralls
