--- a/META.yml
+++ b/META.yml
@@ -3,22 +3,22 @@ abstract: 'Scope database transactions on DBI handles in code, to detect and pre
 author:
   - 'Guillaume Aubert <aubertg@cpan.org>'
 build_requires:
-  DBD::SQLite: 0
-  DBI: 0
-  Data::Dumper: 0
-  File::Spec: 0
-  Test::Exception: 0
-  Test::FailWarnings: 0
-  Test::More: 0
-  Test::Warn: 0
+  DBD::SQLite: '0'
+  DBI: '0'
+  Data::Dumper: '0'
+  File::Spec: '0'
+  Test::Exception: '0'
+  Test::FailWarnings: '0'
+  Test::More: '0'
+  Test::Warn: '0'
 configure_requires:
-  Module::Build: 0
+  Module::Build: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
-license: open_source
+generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.140640'
+license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: DBIx-ScopedTransaction
 no_index:
   file:
@@ -28,10 +28,10 @@ provides:
     file: lib/DBIx/ScopedTransaction.pm
     version: v1.1.4
 requires:
-  Carp: 0
-  Data::Validate::Type: 0
-  Try::Tiny: 0
-  perl: 5.006
+  Carp: '0'
+  Data::Validate::Type: '0'
+  Try::Tiny: '0'
+  perl: '5.006'
 resources:
   bugtracker: https://github.com/guillaumeaubert/DBIx-ScopedTransaction/issues
   homepage: https://metacpan.org/release/DBIx-ScopedTransaction
